# PreventSleep

./: .gitignore  Cargo.toml  PreventSleep.sln  PreventSleep.txt  README.md  build.rs  spec_detail.md
.github/workflows/: release.yml
PreventSleep/: App.config  Form1.Designer.cs  Form1.cs  Form1.resx  PreventSleep.csproj  Program.cs
PreventSleep/Properties/: AssemblyInfo.cs  Resources.Designer.cs
src/: app.rs  config.rs  hotkey.rs  main.rs  power_monitor.rs  sleep_prevention.rs  window_manager.rs
